--- a/style1.css
+++ b/style1.css
@@ -11,6 +11,7 @@ header {
 footer {
     background-color:skyblue;
     height: 75px;
+    padding: 10px;
 }
 
 header a {
@@ -32,6 +33,9 @@ h1, h2 {
 article {
     /* По часовой стрелке */
     margin: 10px 20px 30px 40px;
+    background-color: gray;
+    border-radius: 10px;
+    padding: 15px;
 }
 
 Main {
@@ -42,6 +46,9 @@ Main {
 
 p, h1, h2, h3 {
     margin: 0;
+}
+p {
+    text-
 }
 
 
